--- a/app.css
+++ b/app.css
@@ -1,31 +1,8 @@
 body {
     display: flex;
     justify-content: center;
-    align-items:center;
+    align-items: center;
 }
-
-
-.logo img {
-    height: 40px;
-    margin-right: 5px;
-    width: 42px;
-}
-
-nav {
-    margin-top: 0px;
-}
-
-nav p {
-    position: relative;
-    bottom: 10px;
-}
-
-.logo, .title {
-    display: inline-block;
-    margin-top: 10px;
-    padding-top: 0px;
-}
-
 
 main {
     background-color: #e6e7eb;
@@ -40,210 +17,242 @@ main {
     width: 90%;
     height: 670px;
     display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    background-color:white
 }
 
-.first { 
+.first {
+    display: flex;
     width: 50%;
     height: 670px;
-    background-color: #ffff;
 }
 
-.first h1 {
+.first-div-nav {
+    display: flex;
+    flex-direction:row;
+    gap: 10px;
+    margin-top: 15px;
+    height:30px
+}
+
+.first-div-nav img {
+    width: 23%;
+    margin-left: 10px;
+    height: 30px;
+}
+
+.first-div-nav p {
+    font-size: 15px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    position: relative;
+    bottom: 10px;
+}
+
+.firstCont {
+    width: 65%;
     display: flex;
     justify-content:center;
-    margin-top: 120px;
-    margin-bottom: 5px;
+    flex-direction: column;
+    height:570px;
+    margin-top:70px
+}
+
+.welcome {
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.welcome h1 {
+    margin: 0;
+    font-size: 30px;
+    font-weight: 700;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.welcome{
-    font-size: 13px;
-    margin-left: 220px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+.welcome p {
     margin-bottom: 25px;
-    margin-top: 7px;
+    font-size: 15px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.log-in {
-    width: 270px;
-    margin-left: 220px;
-    border: 1px solid grey;
-    border-radius: 5px;
-    margin-top: 25px;
+.google img {
+    width: 25px;
+    height: 27px;
 }
 
 .google {
+    width: 100%;
+    border:1px solid grey;
     display: flex;
-    justify-content: center;
+    justify-content:center;
+    align-items:center;
+    border-radius:5px;
+    gap: 10px;
+    height: 25px;
+}
+
+.google p {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 10px;
-    font-weight: 600;
-}
-
-.dash {
-    border-bottom: 1px solid grey;
-    font-size: 15px;
-    width: 250px;
-    height: 150px;
-    color:white;
-    font-size: 15px
-}
-
-.dash, .or {
-    display:inline ;
+    color:gray;
+    font-size: 13px;
 }
 
 .or {
-    position:relative;
-    top:6px
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color:grey;
+    gap:10px;
+    margin-top: 20px;
 }
 
-.dashes {
-    margin-left: 220px;
-    margin-top: 10px;
-    color: gray;
-    font-weight: 100;
-}
-
-.email input {
-    border-top: 0;
-    border-left: 0;
-    border-right: 0;
-    width: 285px;
-    font-weight: 100;
-    padding-bottom:10px;
-    border-bottom: 1px solid grey;
+.or p {
+    border-top:1px solid grey;
+    width: 100%;
 }
 
 .email {
-    margin-left: 220px;
-    margin-top: 22px;
-}
-
-.password {
-    margin-left: 220px;
-    margin-top: 15px;
-}
-
-.password input {
-    border-top: 0;
-    border-left: 0;
-    border-right: 0;
-    width: 285px;
-    font-weight: 100;
-    padding-bottom:10px;
-    border-bottom: 1px solid grey;
-}
-
-.check {
-    margin-top: 13px;
-    margin-left: 220px;
-}
-
-.check span {
-    font-size: 12px;
-    font-weight: 700;
+    display: flex;
+    flex-direction: column;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    position:relative;
-    bottom: 2px;
+    font-size: 14px;
+    margin-top: 25px;
 }
 
-input, label, p {
-    display: inline;
+.email input {
+    border: 0;
+    border-bottom: 1px solid gray;
+    margin-top: 0px;
+    padding: 0;
 }
 
-.check p {
-    font-size: 12px;
-    font-weight: 700;
+.remember {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+    margin-top: 0px;
+    margin-top: 3px;
+}
+
+.checkbox {
+    display: flex;
+    flex-direction: row;
+    gap: 7px;
+    align-items: center;
+}
+
+.checkbox p {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin-left: 40px;
+    font-size: 13px;
+    font-weight: 550;
+}
+
+.forgot {
+    font-size: 13px;
+    font-weight: 550;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     text-decoration: underline;
 }
 
-button {
+.button {
     background-color:black;
-    color: white;
-    margin-left: 220px;
-    width: 285px;
-    margin-top: 25px;
-    height: 35px;
-    border-radius: 8px;
+    margin-top: 20px;
+    height: 28px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius:5px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.button button {
+    background-color:black;
+    color:white;
+    border:0px
 }
 
 .sign-up {
-    margin-left: 233px;
-    margin-top: 25px;
+    display: flex;
+    justify-content: center;
     font-size: 14px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    gap: 5px;
 }
 
 .sign-up span {
-    margin-left: 5px;
     font-weight: 600;
 }
 
-nav {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 20px;
-    margin-top: 20px;
-    margin-left: 30px;
-    font-weight: 600;
-}
-
-.image {
+.second {
     width: 50%;
     height: 670px;
     background: url(womannnn.jpg) no-repeat;
     background-size: cover;
 }
 
-.mirror {
-    width: 100px;
-    height:120px;
-    margin-top: 200px;
+.secondCont {
+    display:flex;
+    flex-direction: column;
+    width: 90%;
+    justify-self: center;
+    height: 350px;
+}
+
+.mirror img{
+    width: 100%;
+    height: 150px;
+    margin-top: 120px;
+    opacity: 0.9;
 }
 
 .note {
     color: white;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 33px;
-    display:flex;
-    justify-content: center;
+    font-size: 30px;
     font-weight: 500;
 }
 
-.note p {
-    margin-top: 0;
+.hall {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items:center;
+    padding: 0;
+    margin: 0;
 }
 
-.sophie {
+.sophie p {
     color: white;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size:29px;
-    margin-left: 77px;
-    margin-bottom: 0px;
+    font-size: 29px;
     font-weight: 500;
+    padding: 0;
+    margin: 0;
 }
 
-.sophie, .starsss{
-    display:inline;
-    margin-top: 0px;
-}
-
-.star { 
+.star {
     color: white;
     font-size: 20px;
+    padding: 0;
+    margin: 0;
 }
 
-.starsss {
-    margin-left: 300px;
-}
-
-
-.founder  {
+.footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items:center;
     margin-top: 20px;
-    margin-left: 77px;
+}
+
+.founder {
     color: white;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 600;
@@ -252,44 +261,29 @@ nav {
 .agency {
     color: white;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin-left: 40px;
     font-size: 12px;
     font-weight: 400;
-    margin-top: 12px;
+}
+
+.founder-and-agency p{
+    display: flex;
+    flex-direction: column;
+    gap: 3px;
+    padding: 0;
+    margin: 10px;
+}
+
+.direction {
+    display: flex;
+    gap: 20px;
 }
 
 i {
-    color:white;
+    color: white;
     border: 1px solid white;
     border-radius: 50%;
     padding: 15px;
     font-size: 10px;
-    margin-right: 20px;
-    margin-bottom: 50px;
-    margin-top: 0px;
-}
-
-.footer, .direction {
-    display: inline-block;
-}
-
-.direction {
-    margin-left: 320px;
-    margin-top: 0;
-    margin-bottom: px;
-}
-
-.log-in img{
-    height: 30px;
-    margin: 6px;
-
-}
-
-.log-in {
-    display: flex;
-    align-items:center;
-    justify-content:center;
-    height: 33px
 }
 
 @media (max-width:768px) {
@@ -322,20 +316,20 @@ i {
     nav p {
         font-size: 7px;
     }
-    
+
     .first h1 {
         font-size: 15px;
         margin-top: 67px;
         margin-bottom: 3px;
     }
-    
-    .welcome{
+
+    .welcome {
         font-size: 7px;
         margin-left: 90px;
         margin-bottom: 14px;
         margin-top: 4px;
     }
-    
+
     .log-in {
         width: 200px;
         margin-left: 90px;
@@ -343,12 +337,12 @@ i {
         border-radius: 3px;
         margin-top: 15px;
     }
-    
+
     .google {
         font-size: 0.5em;
         font-weight: 400;
     }
-    
+
     .dash {
         font-size: 10.5px;
     }
@@ -356,56 +350,56 @@ i {
     .dash {
         width: 10px;
     }
-    
+
     .dashes {
         margin-left: 90px;
         margin-top: 5px;
         color: gray;
         font-weight: 100;
     }
-    
+
     .email input {
         border-top: 0;
         border-left: 0;
         border-right: 0;
         width: 200px;
         font-weight: 100;
-        padding-bottom:5px;
+        padding-bottom: 5px;
         border-bottom: 1px solid grey;
     }
-    
+
     .email {
         margin-left: 90px;
         margin-top: 12px;
     }
-    
+
     .password {
         margin-left: 90px;
         margin-top: 7px;
     }
-    
+
     .password input {
         border-top: 0;
         border-left: 0;
         border-right: 0;
         width: 200px;
         font-weight: 100;
-        padding-bottom:5px;
+        padding-bottom: 5px;
         border-bottom: 1px solid grey;
     }
-    
+
     .check {
         margin-top: 7px;
         margin-left: 90px;
     }
-    
+
     .check span {
         font-size: 8px;
         font-weight: 800;
-        position:relative;
+        position: relative;
         bottom: 2px;
     }
-    
+
     .check p {
         font-size: 8px;
         font-weight: 800;
@@ -413,9 +407,9 @@ i {
         margin-left: 20px;
         text-decoration: underline;
     }
-    
+
     button {
-        background-color:black;
+        background-color: black;
         color: white;
         margin-left: 90px;
         width: 200px;
@@ -423,83 +417,84 @@ i {
         height: 35px;
         border-radius: 8px;
     }
-    
+
     .sign-up {
         margin-left: 85px;
         margin-top: 25px;
         font-size: 10px;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
-    
+
     .sign-up span {
         margin-left: 5px;
         font-weight: 600;
     }
-    
-    
+
+
     .image {
         width: 50%;
         height: 70vh;
         background: url(womannnn.jpg) no-repeat;
         background-size: cover;
     }
-    
+
     .mirror {
         width: 160px;
         height: 70px;
         margin-top: 190px;
     }
-    
+
     .note {
         font-size: 17px;
         font-weight: 500;
     }
-    
+
     .note p {
         margin-top: 0;
     }
-    
+
     .sophie {
         color: white;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        font-size:20px;
+        font-size: 20px;
         margin-left: 32px;
         margin-bottom: 0px;
         font-weight: 500;
     }
-    
-    .sophie, .starsss{
-        display:inline;
+
+    .sophie,
+    .starsss {
+        display: inline;
         margin-top: 0px;
     }
-    
-    .star { 
+
+    .star {
         font-size: 10px;
     }
-    
+
     .starsss {
         margin-left: 250px;
         margin-top: 20px;
         position: relative;
         bottom: 20px
     }
-    
-    
-    .founder  {
+
+
+    .founder {
         margin-top: 10px;
         margin-left: 32px;
         font-weight: 600;
     }
-    
+
     .agency {
         margin-left: 17px;
         font-size: 12px;
         font-weight: 400;
         margin-top: 12px;
     }
-    
+
     i {
-        color:white;
+        color: white;
         border: 1px solid white;
         border-radius: 50%;
         padding: 10px;
@@ -508,28 +503,29 @@ i {
         margin-bottom: 50px;
         margin-top: 0px
     }
-    
-    .footer, .direction {
+
+    .footer,
+    .direction {
         display: inline-block;
     }
-    
+
     .direction {
         margin-left: 233px;
         margin-top: 0;
         position: relative;
         bottom: 35px;
     }
-    
-    .log-in img{
+
+    .log-in img {
         height: 30px;
         margin: 5px;
-    
+
     }
-    
+
     .log-in {
         display: flex;
-        align-items:center;
-        justify-content:center;
+        align-items: center;
+        justify-content: center;
         height: 33px
     }
 }
@@ -564,20 +560,20 @@ i {
     nav p {
         font-size: 5px;
     }
-    
+
     .first h1 {
         font-size: 11px;
         margin-top: 67px;
         margin-bottom: 3px;
     }
-    
-    .welcome{
+
+    .welcome {
         font-size: 7px;
         margin-left: 50px;
         margin-bottom: 14px;
         margin-top: 4px;
     }
-    
+
     .log-in {
         width: 150px;
         margin-left: 50px;
@@ -585,12 +581,12 @@ i {
         border-radius: 3px;
         margin-top: 15px;
     }
-    
+
     .google {
         font-size: 0.5em;
         font-weight: 400;
     }
-    
+
     .dash {
         font-size: 7px;
     }
@@ -598,65 +594,65 @@ i {
     .dash {
         width: 10px;
     }
-    
+
     .dashes {
         margin-left: 50px;
         margin-top: 5px;
         color: gray;
         font-weight: 100;
     }
-    
+
     .email input {
         border-top: 0;
         border-left: 0;
         border-right: 0;
         width: 120px;
         font-weight: 100;
-        padding-bottom:5px;
+        padding-bottom: 5px;
         border-bottom: 1px solid grey;
     }
-    
+
     .email {
         margin-left: 50px;
         margin-top: 12px;
     }
-    
+
     .password {
         margin-left: 50px;
         margin-top: 7px;
     }
-    
+
     .password input {
         border-top: 0;
         border-left: 0;
         border-right: 0;
         width: 120px;
         font-weight: 100;
-        padding-bottom:5px;
+        padding-bottom: 5px;
         border-bottom: 1px solid grey;
     }
-    
+
     .check {
         margin-top: 7px;
         margin-left: 50px;
     }
-    
+
     .check span {
         font-size: 6px;
         font-weight: 800;
-        position:relative;
+        position: relative;
         bottom: 2px;
     }
-    
+
     .check p {
         font-size: 6px;
         font-weight: 800;
         margin-left: 4px;
         text-decoration: underline;
     }
-    
+
     button {
-        background-color:black;
+        background-color: black;
         color: white;
         margin-left: 65px;
         width: 120px;
@@ -664,81 +660,82 @@ i {
         height: 25px;
         border-radius: 4px;
     }
-    
+
     .sign-up {
         margin-left: 70px;
         margin-top: 14px;
         font-size: 6px;
     }
-    
+
     .sign-up span {
         margin-left: 5px;
         font-weight: 600;
     }
-    
-    
+
+
     .image {
         width: 50%;
         height: 65vh;
         background: url(womannnn.jpg) no-repeat;
         background-size: cover;
     }
-    
+
     .mirror {
         width: 100px;
         height: 70px;
         margin-top: 150px;
     }
-    
+
     .note {
         font-size: 10px;
         font-weight: 500;
     }
-    
+
     .note p {
         margin-top: 0;
     }
-    
+
     .sophie {
-        font-size:12px;
+        font-size: 12px;
         margin-left: 27px;
         margin-bottom: 0px;
         font-weight: 600;
     }
-    
-    .sophie, .starsss{
-        display:inline;
+
+    .sophie,
+    .starsss {
+        display: inline;
         margin-top: 20px;
     }
-    
-    .star { 
+
+    .star {
         font-size: 9px;
     }
-    
+
     .starsss {
         margin-left: 150px;
         margin-top: 20px;
         position: relative;
         margin-bottom: 20px;
     }
-    
-    
-    .founder  {
+
+
+    .founder {
         margin-top: 8px;
         margin-left: 27px;
         font-weight: 600;
         font-size: 12px;
     }
-    
+
     .agency {
         margin-left: 14px;
         font-size: 9px;
         font-weight: 400;
         margin-top: 8px;
     }
-    
+
     i {
-        color:white;
+        color: white;
         border: 1px solid white;
         border-radius: 50%;
         padding: 5px;
@@ -747,28 +744,29 @@ i {
         margin-bottom: 50px;
         margin-top: 0px
     }
-    
-    .footer, .direction {
+
+    .footer,
+    .direction {
         display: inline-block;
     }
-    
+
     .direction {
         margin-left: 150px;
         margin-top: 0;
         position: relative;
         bottom: 35px;
     }
-    
-    .log-in img{
+
+    .log-in img {
         height: 30px;
         margin: 5px;
-    
+
     }
-    
+
     .log-in {
         display: flex;
-        align-items:center;
-        justify-content:center;
+        align-items: center;
+        justify-content: center;
         height: 33px
     }
 }
